# backend/api/urls.py
@@ -8,6 +8,7 @@ urlpatterns = [
     path('token/', views.login, name='token'),
     path('token/refresh/', TokenRefreshView.as_view(), name='token-refresh'),
     path('logout/', views.logout, name='logout'),
+    path('update-profile/', views.update_profile, name='update-profile'),
     path('experiences/save/', views.save_experiences, name='save-experiences'),
     path('experiences/', views.get_experiences, name='get-experiences'),
 ]
